# Friday_mark2

./: .env.example  .gitignore  FILE STRUCTURE.md  README.md  clean_facts.py  clean_facts2.py  dump_facts.py  health_check.py  inspect_db.py  migrate_legacy.py  requirements.txt  stress_test_facts.py  terminal_chat.py  test_full_integration.py  test_llm_slots.py
friday/: ARCHITECTURE.md  __init__.py  pyproject.toml  requirements.txt
friday/agents/: __init__.py  base_agent.py  registry.py
friday/awareness/: __init__.py  context_tracker.py  execution_monitor.py  live_context.py  status_reporter.py  world_model.py
friday/background/: __init__.py  context_summarizer.py  goal_tracker.py  google_workspace.py  knowledge_extractor.py  memory_decay.py  proactive_events.py  scheduler.py
friday/cache/: __init__.py  redis_client.py  search_cache.py
friday/config/: __init__.py  friday.yaml  settings.py
friday/execution/: __init__.py  engine.py  learning.py  memory_aware_executor.py  parallel_executor.py  series_executor.py  state_manager.py  subagent_registry.py
friday/interfaces/: __init__.py  base.py
friday/llm/: __init__.py  api_slot.py  base.py  ollama_slot.py  slotted_provider.py
friday/reasoning/: __init__.py  chain_of_thought.py  explainability.py  reflection.py  transparency.py
friday/router/: __init__.py  intent_classifier.py  llm_router.py  smart_router.py
friday/search/: __init__.py  embedding_manager.py  fts_search.py  indexer.py  mmr.py
friday/security/: __init__.py  filters.py
friday/tests/: __init__.py
friday/tools/: __init__.py  base_tool.py  (+2 more)
(+46 files in other folders)
